chore(model-ad): regenerate api clients
