# libs/model-ad/api-description/openapi/openapi.yaml
@@ -294,11 +294,15 @@ components:
           description: Value that matched the query
         model_organism:
           $ref: '#/components/schemas/ModelOrganism'
+        precedence:
+          type: integer
+          description: Rank of the field that matched, used to order results (lower first)
       required:
         - id
         - match_field
         - match_value
         - model_organism
+        - precedence
     BasicError:
       type: object
       description: Problem details (tools.ietf.org/html/rfc7807)
